--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "aws-sdk": "^2.714.2",
     "cookie-parser": "~1.4.4",
+    "dayjs": "^1.9.1",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
